@@ -132,9 +132,9 @@ def test_pylint_config_attr() -> None:
     assert [c.name for c in pylinter.ancestors()] == expect
     assert list(astroid.Instance(pylinter).getattr("config"))
     inferred = list(astroid.Instance(pylinter).igetattr("config"))
-    assert len(inferred) == 1
-    assert inferred[0].root().name == "optparse"
-    assert inferred[0].name == "Values"
+    assert len(inferred) == 3
+    assert inferred[0].root().name == "argparse"
+    assert inferred[0].name == "Namespace"
 
 
 @pytest.mark.timeout(30)
